--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "@types/jest": "^29.5.0",
     "babel-jest": "^29.5.0",
     "jest": "^29.5.0",
-    "serverless-offline": "^12.0.4"
+    "serverless-offline": "^12.0.4",
+    "supertest": "^6.3.3"
   },
   "jest": {
     "verbose": true,
