--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "description": "",
   "scripts": {
+    "lint": "eslint --ext .js .",
     "local": "sls offline start --reloadHandler",
     "deploy": "serverless deploy",
     "unit:test": "jest --verbose --maxWorkers 2 ./src/ --",
@@ -22,6 +23,7 @@
     "@babel/preset-env": "^7.20.2",
     "@types/jest": "^29.5.0",
     "babel-jest": "^29.5.0",
+    "eslint": "^8.36.0",
     "jest": "^29.5.0",
     "serverless-offline": "^12.0.4",
     "supertest": "^6.3.3"
