--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,6 +3,10 @@ name: Build
 on:
   workflow_call:
     secrets:
+      AWS_COGNITO_REGION: 
+        required: true    
+      AWS_COGNITO_CLIENT_ID: 
+        required: true
       AWS_ACCESS_KEY_ID: 
         required: true
       AWS_SECRET_ACCESS_KEY: 
@@ -20,6 +24,7 @@ jobs:
         with:
           args: deploy
         env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-
+         AWS_COGNITO_REGION: ${{ env.AWS_COGNITO_REGION }} 
+         AWS_COGNITO_CLIENT_ID: ${{ secrets.AWS_COGNITO_CLIENT_ID }} 
+         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
