--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: Build
+name: Deploy
 
 on:
   workflow_call:
@@ -19,12 +19,15 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+      - name: "Install Dependencies"
+        run: npm install
+
       - name: serverless deploy
         uses: serverless/github-action@v3.1
         with:
           args: deploy
         env:
-         AWS_COGNITO_REGION: ${{ env.AWS_COGNITO_REGION }} 
+         AWS_COGNITO_REGION: ${{ secrets.AWS_COGNITO_REGION }} 
          AWS_COGNITO_CLIENT_ID: ${{ secrets.AWS_COGNITO_CLIENT_ID }} 
          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
