--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,8 +14,20 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+      - name: Cache node modules
+        id: cache-npm
+        uses: actions/cache@v3
+        env:
+          cache-name: cache-node-modules
+        with:
+          path: .
+          node-version: ${{ inputs.node-version }}
+          key: ${{ env.cache-name }}${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ env.cache-name }}
 
       - name: "Install Dependencies"
+        if: ${{ steps.cache-npm.outputs.cache-hit != 'true' }}
         run: npm install
 
       - name: "Unit tests"
