--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -24,6 +24,8 @@ jobs:
     if: ${{ github.event_name == 'push' || (github.event_name == 'pull_request' && github.event.pull_request.state == 'open') }}
     uses: ./.github/workflows/release.yml
     needs: build
+    with:
+      node-version: "18"    
     secrets:
       AWS_COGNITO_REGION: ${{ secrets.AWS_COGNITO_REGION }} 
       AWS_COGNITO_CLIENT_ID: ${{ secrets.AWS_COGNITO_CLIENT_ID }} 
