DPP-18 updated pipeline

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,24 +21,13 @@ run-name: "Release Staging"
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    container: node:18-alpine3.17
 
     steps:
-      - uses: actions/checkout@v3
-      - name: Cache node modules
-        id: cache-npm
-        uses: actions/cache@v3
-        env:
-          cache-name: cache-node-modules
+      - uses: actions/setup-node@v3
         with:
-          path: .
           node-version: ${{ inputs.node-version }}
-          key: ${{ env.cache-name }}${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ env.cache-name }}
 
       - name: "Install Dependencies"
-        if: ${{ steps.cache-npm.outputs.cache-hit != 'true' }}
         run: npm install
 
       - name: serverless deploy
