--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,25 +11,17 @@ run-name: "Build Staging"
 jobs:
   build:
     runs-on: ubuntu-latest
-    container: node:18-alpine3.17
 
     steps:
-      - uses: actions/checkout@v3
-      - name: Cache node modules
-        id: cache-npm
-        uses: actions/cache@v3
-        env:
-          cache-name: cache-node-modules
+      - uses: actions/setup-node@v3
         with:
-          path: .
           node-version: ${{ inputs.node-version }}
-          key: ${{ env.cache-name }}${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ env.cache-name }}
 
       - name: "Install Dependencies"
-        if: ${{ steps.cache-npm.outputs.cache-hit != 'true' }}
         run: npm install
+
+      - name: "lint"
+        run: npm run lint
 
       - name: "Unit tests"
         run: npm run unit:test
