--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,6 +17,12 @@ jobs:
         with:
           node-version: ${{ inputs.node-version }}
 
+- uses: actions/checkout@v3
+- uses: actions/setup-node@v3
+  with:
+    node-version: 16
+- run: npm ci          
+
       - name: "Install Dependencies"
         run: npm install
 
