--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,9 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: ${{ inputs.node-version }}
-      - run: npm ci
+      
+      - name: "Install Dependencies"
+        run: npm install      
 
       - name: "lint"
         run: npm run lint
