--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -27,8 +27,8 @@ jobs:
     with:
       node-version: "18"    
     secrets:
-      AWS_COGNITO_REGION: ${{ secrets.AWS_COGNITO_REGION }} 
-      AWS_COGNITO_CLIENT_ID: ${{ secrets.AWS_COGNITO_CLIENT_ID }} 
-      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      AWS_COGNITO_REGION: ${{ secrets.dev.AWS_COGNITO_REGION }} 
+      AWS_COGNITO_CLIENT_ID: ${{ secrets.dev.AWS_COGNITO_CLIENT_ID }} 
+      AWS_ACCESS_KEY_ID: ${{ secrets.dev.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.dev.AWS_SECRET_ACCESS_KEY }}
 
