--- a/serverless.yml
+++ b/serverless.yml
@@ -7,6 +7,10 @@ provider:
   stage: dev
   region: ${env:AWS_COGNITO_REGION}
 
+variables:
+  # Hide endpoint in the output deploy
+  hideStackOutputs: '1'
+
 functions:
   functionName:
     AccountLmb:
