--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,41 +1,34 @@
-name: "Release Staging"
+service: visor-account-lmb-api
+frameworkVersion: "3"
 
-on:
-  workflow_call:
-    inputs:
-      node-version:
-        required: true
-        type: string
-    secrets:
-      AWS_COGNITO_REGION:
-        required: true
-      AWS_COGNITO_CLIENT_ID:
-        required: true
-      AWS_ACCESS_KEY_ID:
-        required: true
-      AWS_SECRET_ACCESS_KEY:
-        required: true     
+provider:
+  name: aws
+  runtime: nodejs18.x
+  stage: dev
+  region: ${env:AWS_COGNITO_REGION}
 
-jobs:
-  deploy:
-    runs-on: ubuntu-latest
+functions:
+  functionName:
+    AccountLmb:
+    # Environment variables need to be in OS
+    environment:
+      AWS_COGNITO_REGION: ${env:AWS_COGNITO_REGION}
+      AWS_COGNITO_CLIENT_ID: ${env:AWS_COGNITO_CLIENT_ID}
+    handler: index.handler
+    events:
+      # Accept any path that is added to the service
+      - http:
+          path: /{proxy+}
+          method: ANY
 
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: ${{ inputs.node-version }}
-      
-      - name: "Install Dependencies"
-        run: npm install
+# Hide endpoint in the output deploy
+noDeploy: '1'          
 
-      - name: "Install serverless framework"
-        run: npm install -g serverless
+plugins:
+  # plus to serverless work offile
+  - serverless-offline
 
-      - name: "deploy application"
-        env:
-           AWS_COGNITO_REGION: ${{ secrets.AWS_COGNITO_REGION }}
-           AWS_COGNITO_CLIENT_ID: ${{ secrets.AWS_COGNITO_CLIENT_ID }}
-           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        run: npm run deploy
+custom:
+  # This is necessary because the docker to use this host
+  serverless-offline:
+    host: 0.0.0.0
