--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       - "3000:3000"
     environment:
       - AWS_COGNITO_REGION=${AWS_COGNITO_REGION}
+      - AWS_COGNITO_REGION=${AWS_COGNITO_REGION}
       - AWS_COGNITO_CLIENT_ID=${AWS_COGNITO_CLIENT_ID}
       - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
       - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
