--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,12 +9,19 @@ on:
     secrets:
       AWS_COGNITO_REGION:
         required: true
+      AWS_COGNITO_POOL_ID:
+        required: true
       AWS_COGNITO_CLIENT_ID:
+        required: true        
+      AWS_API_GATEWAY_ID:
+        required: true
+      AWS_API_GATEWAY_RESOURCE_ID:
         required: true
       AWS_ACCESS_KEY_ID:
         required: true
       AWS_SECRET_ACCESS_KEY:
-        required: true     
+        required: true
+
 
 jobs:
   deploy:
