--- a/serverless.yml
+++ b/serverless.yml
@@ -7,6 +7,11 @@ provider:
   stage: dev
   region: ${env:AWS_COGNITO_REGION}
 
+  # This is necessary to use only api to multi-resource
+  apiGateway:
+    restApiId: ${env:AWS_API_GATEWAY_ID}
+    restApiRootResourceId: ${env:AWS_API_GATEWAY_RESOURCE_ID}
+
 functions:
   functionName:
     AccountLmb:
@@ -19,11 +24,11 @@ functions:
     events:
       # Accept any path that is added to the service
       - http:
-          path: /{proxy+}
+          path: /account/{proxy+}
           method: ANY
 
 # Hide endpoint in the output deploy
-noDeploy: true     
+noDeploy: true
 
 plugins:
   # plus to serverless work offile
