--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "aws-node-express-api-project",
+  "name": "visor-account-lmb-api",
   "private": "true",
   "version": "1.0.0",
   "type": "module",
