--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "aws-sdk": "^2.1337.0",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "serverless-http": "^3.1.1"
   },
