--- a/serverless.yml
+++ b/serverless.yml
@@ -9,8 +9,8 @@ provider:
 
   # This is necessary to use only api to multi-resource
   apiGateway:
-    restApiId: ${env:AWS_API_GATEWAY_ID}
-    restApiRootResourceId: ${env:AWS_API_GATEWAY_RESOURCE_ID}
+    restApiId: 143gm9rzn3
+    restApiRootResourceId: kimq74959l
 
 functions:
   functionName:
@@ -26,10 +26,6 @@ functions:
       - http:
           path: /account/{proxy+}
           method: ANY
-
-# Hide endpoint in the output deploy
-noDeploy: true
-
 plugins:
   # plus to serverless work offile
   - serverless-offline
